# axum_basic_api

./: Cargo.toml  README.md
src/: main.rs
