[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["macros"]}
tokio = { version = "1.28.1", features = ["full"] }
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "mysql"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"